# RISC-16-bit-CPU

./: CMakeLists.txt  assembler.cpp  main.cpp
cpu/: gpr_cpu.cpp  gpr_cpu.h
src/: gpr_cpu.cpp
